tests/baselines/reference/TypeArgumentList1.errors.txt
==== tests/cases/compiler/TypeArgumentList1.ts (3 errors) ====
    Foo<A,B,\ C>(4, 5, 6);
            ~
!!! TypeArgumentList1.ts(1,9): error TS1001: Unexpected character "\".
            ~
!!! TypeArgumentList1.ts(1,9): error TS1008: Unexpected token; 'type' expected.
    ~~~
!!! TypeArgumentList1.ts(1,1): error TS2095: Cannot find name 'Foo'.